--- a/013/index.html
+++ b/013/index.html
@@ -12,6 +12,7 @@
         -webkit-user-drag: none;
       }
       .objetos{
+        margin-top:50px;
         display: flex;
         gap:20px;
       }
@@ -28,6 +29,8 @@
       <div class="objetos">
         <div class="colores" id="rojo">red</div>
         <div class="colores" id="negro">black</div>
+        <div class="colores" id="blue">blue</div>
+
         <input type="text" id="width" placeholder="px"> <p> pixels</p>
       </div>
       <script src="script.js"></script>
